crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__missing_closing_brace_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/missing_closing_brace_0.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..24,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..24,
                    value: Dict(
                        ExprDict {
                            node_index: NodeIndex(None),
                            range: 0..24,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 1..2,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 5..8,
                                            id: Name("def"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Call(
                                            ExprCall {
                                                node_index: NodeIndex(None),
                                                range: 9..14,
                                                func: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 9..12,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                arguments: Arguments {
                                                    range: 12..14,
                                                    node_index: NodeIndex(None),
                                                    args: [],
                                                    keywords: [],
                                                    runtime_args: None,
                                                    runtime_bases: None,
                                                },
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 20..24,
                                            id: Name("pass"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ],
                            runtime_values: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | {x:
2 |
3 | def foo():
  | ^^^ Syntax Error: invalid syntax
4 |     pass
  |


  |
1 | {x:
2 |
3 | def foo():
  |     ^^^ Syntax Error: invalid syntax
4 |     pass
  |


  |
3 | def foo():
4 |     pass
  |     ^^^^ Syntax Error: invalid syntax


  |
3 | def foo():
4 |     pass
  |         ^ Syntax Error: unexpected EOF while parsing
